--- a/advanced-results/package.json
+++ b/advanced-results/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "advanced-results0middleware",
-  "version": "0.1.0",
+  "name": "advanced-results",
+  "version": "0.5.0",
   "description": "Advanced query middleware for expressjs and mongoose",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p .",
-    "dev": "nodemon src/index.dev.ts"
+    "dev": "nodemon src/index.dev.ts",
+    "publish": "npm run build & npm publish"
   },
   "files": [
     "dist"
