Change in the package script

--- a/advanced-results/package.json
+++ b/advanced-results/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc -p .",
     "dev": "nodemon src/index.dev.ts",
-    "publish": "npm run build & npm publish"
+    "myPublish": "npm run build & npm publish"
   },
   "files": [
     "dist"
