--- a/xss-advanced/package.json
+++ b/xss-advanced/package.json
@@ -1,27 +1,51 @@
 {
-  "name": "xss-clean-advanced",
+  "name": "xss-advanced",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Node.js Connect middleware to sanitize user input coming from POST body, GET queries, and url params. Works with Express",
+  "keywords": [
+    "expressjs",
+    "backend",
+    "middleware",
+    "xss",
+    "sanitizer",
+    "clean data",
+    "filter data",
+    "mongoose"
+  ],
+  "homepage": "https://github.com/Blagoj5/baze-packages/tree/main/xss-advanced",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Blagoj5/baze-packages/tree/main/xss-advanced"
+  },
+  "bugs": {
+    "url": "https://github.com/Blagoj5/baze-packages/issues"
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p .",
     "dev": "nodemon src/index.dev.ts",
     "myPublish": "npm run build & npm publish"
   },
-  "author": "Blagoj",
-  "license": "ISC",
+  "author": "Blagoj Petrov",
+  "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.37",
     "@types/node": "^14.14.6",
-    "colors": "^1.4.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.12",
+    "mongoose": "^5.10.17",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
     "xss": "^1.0.8"
+  },
+  "peerDependencies": {
+    "express": ">=4"
   }
 }
