Creating typescript project
Creating and implementing the react-show-more-button component. Adding documentation for it

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/jest": "^26.0.17",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
     "nodemon": "^2.0.6"
