--- a/react-typescript-project/src/components/ShowMore/package.json
+++ b/react-typescript-project/src/components/ShowMore/package.json
@@ -33,12 +33,19 @@
     "react": ">=16.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/node-sass": "^4.11.1",
     "@types/react": "^17.0.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "webpack": "^5.10.0",
